Newbie/stats-preview-card-component-main/css/style.css
:root {
  --font-main: "Inter", sans-serif;
  --font-secondary: "Lexend Deca", sans-serif;

  --text-body: 15px;

  --main-bg: hsl(233, 47%, 7%);
  --card-bg: hsl(244, 38%, 16%);
  --accent-violet: hsl(277, 64%, 61%);
  --main-heading: hsl(0, 0%, 100%);
  --main-para: hsla(0, 0%, 100%, 0.75);
  --stat-headings: hsla(0, 0%, 100%, 0.6);

  --radius: 8px;
  --img-color-tint: hsla(283, 62%, 46%, 0.596);
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--main-bg);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
}

.card {
  background-color: var(--card-bg);
  border-radius: var(--radius);
  color: white;

  width: 1000px;
  height: 400px;

  display: grid;
  grid-template-columns: 51% 49%;
  grid-template-rows: 1fr;
}

.card__cell-left {
  padding: 3.5em;
  text-align: start;
}

.cell-left__header {
  color: var(--main-heading);
  font-family: var(--font-main);
  font-weight: 700;
  font-size: 1.3em;
  margin-bottom: 1em;
}

.cell-left__header--highlight {
  color: var(--accent-violet);
  margin-bottom: 1em;
}

.cell-left__text {
  color: var(--main-para);
  font-family: var(--font-secondary);
  font-size: var(--text-body);
  font-weight: 400;
  line-height: calc(var(--text-body) + 12px);
  margin-bottom: 4.8em;
}

.cell-left__stats {
  width: 80%;
}

.cell-left__stats ul {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: 0;
  list-style: none;
}

.stats__headings {
  color: var(--main-heading);
  font-family: var(--font-main);
  font-size: 1.3rem;
  font-weight: 700;
}

.stats__stat {
  color: var(--stat-headings);
  font-family: var(--font-secondary);
  text-transform: uppercase;
  font-size: 0.8rem;
  letter-spacing: 0.1em;
}

.cell-right__img {
  width: 100%;
  height: 400px;

  background-image: linear-gradient(
      var(--img-color-tint),
      var(--img-color-tint)
    ),
    url("/images/image-header-desktop.jpg");
  background-size: 100% 400px;
  border-top-right-radius: var(--radius);
  border-bottom-right-radius: var(--radius);
  mix-blend-mode: lighten;
  filter: contrast(130%);
}

.footer,
.footer__link {
  font-family: var(--font-main);
  font-size: 0.8rem;
  font-weight: 400;
  color: hsla(233, 14%, 24%, 0.863);
  margin-top: 1.5em;
}

@media screen and (max-width: 576px) {
  body {
    justify-content: space-between;
    min-height: auto;
  }

  .card {
    height: 82vh;
    width: 300px;
    /* width: 90vw; */
    grid-template-columns: 1fr;
    grid-template-rows: 31% 69%;
    margin: auto 0;
  }

  .card__cell-left {
    grid-area: 2/1/3/2;
    padding: 1.5em;
    text-align: center;
  }

  .cell-left__header {
    font-size: 1.17em;
    margin-top: 1em;
    margin-bottom: 0.7em;
  }

  .cell-left__text {
    font-size: 16px;
    margin-bottom: 2.3em;
  }

  .cell-left__stats {
    margin: 0 auto;
  }

  .cell-left__stats ul {
    height: 13.65em;
    flex-direction: column;
    justify-content: space-between;
  }

  .stats__headings {
    font-size: 1.5rem;
    margin-bottom: 0.25em;
  }

  .card__cell-right {
    grid-area: 1/1/2/2;
  }

  .cell-right__img {
    height: 100%;
    background-image: linear-gradient(
        var(--img-color-tint),
        var(--img-color-tint)
      ),
      url("/images/image-header-mobile.jpg");
    background-size: 100% 100%;
    background-repeat: no-repeat no-repeat;
    border-top-right-radius: var(--radius);
    border-top-left-radius: var(--radius);
    border-bottom-right-radius: 0;
    filter: contrast(150%);
  }

  .footer,
  .footer__link {
    font-size: 0.65rem;
  }

  .footer {
    margin: 0 auto 1em auto;
    display: block;
    width: 100vw;
    text-align: center;
    position: fixed;
    bottom: 2em;
  }
}

